binrw/tests/ui/args_vec_mistakes.stderr
error[E0277]: the trait bound `VecArgs<()>: Default` is not satisfied
 --> tests/ui/args_vec_mistakes.rs:7:12
  |
7 | struct Foo(Vec<u8>);
  |            ^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
  |
  = note: required for `VecArgs<()>` to implement `MissingArgsDirective`
note: required by a bound in `Required::args`
 --> src/private.rs
  |
  | pub trait Required: MissingArgsDirective {
  |                     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Required::args`

error[E0308]: mismatched types
  --> tests/ui/args_vec_mistakes.rs:10:17
   |
10 | struct Bar(#[br(args((),))] Vec<u8>);
   |                 ^^^^        ------- expected due to this
   |                 |
   |                 expected struct `VecArgs`, found tuple
   |
   = note: expected struct `VecArgs<()>`
               found tuple `((),)`

error[E0599]: the method `finalize` exists for struct `binrw::binread::impls::VecArgsBuilder<(), Needed, Satisfied>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:13:17
   |
13 | struct Baz(#[br(args { inner: () })] Vec<u8>);
   |                 ^^^^ method cannot be called on `binrw::binread::impls::VecArgsBuilder<(), Needed, Satisfied>` due to unsatisfied trait bounds
   |
  ::: src/builder_types.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `Needed: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `Needed: SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `finalize` exists for struct `binrw::binread::impls::VecArgsBuilder<(NoDefault,), Satisfied, Needed>`, but its trait bounds were not satisfied
  --> tests/ui/args_vec_mistakes.rs:22:29
   |
22 | struct Qux(#[br(count = 1)] Vec<Inner>);
   |                             ^^^^^^^^^^ method cannot be called on `binrw::binread::impls::VecArgsBuilder<(NoDefault,), Satisfied, Needed>` due to unsatisfied trait bounds
   |
  ::: src/builder_types.rs
   |
   | pub struct Needed;
   | ----------------- doesn't satisfy `Needed: SatisfiedOrOptional`
   |
   = note: the following trait bounds were not satisfied:
           `(NoDefault,): Default`
           `Needed: SatisfiedOrOptional`
   = note: this error originates in the macro `binrw::args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `VecArgs<()>: Default` is not satisfied
  --> tests/ui/args_vec_mistakes.rs:25:5
   |
25 |     Vec::<u8>::read(&mut binrw::io::Cursor::new(b"")).unwrap();
   |     ^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `VecArgs<()>`
   |
   = note: required for `VecArgs<()>` to implement `Required`
note: required by a bound in `binrw::BinRead::read`
  --> src/binread/mod.rs
   |
   |         Self::Args: Required,
   |                     ^^^^^^^^ required by this bound in `binrw::BinRead::read`
